<resources>
    <string name="app_name">Age Calculator</string>
    <string name="section_heading_one">Calculate your\n<br>Age in minutes</br></string>
    <string name="select_date_btn">Select your Birth-date</string>
    <string name="selectedDate_text">Your Birth-Date\n</string>
    <string name="matrix_section_text">Want age in ?</string>
    <string name="radio_option_one">Years</string>
    <string name="radio_option_two">Days</string>
    <string name="radio_option_three">Time</string>
    <string name="copyright_text">Made with ❤ by diptnc</string>
    <string name="validateEntriesErrorText">Please check all the entries</string>
    <!--    second screen -->
    <string name="resultsPage_section_one">Your Results</string>
    <string name="resultsPage_results_section">You are</string>
    <string name="resultsPage_btn1">Try again</string>
    <string name="resultsPage_btn2">Support me</string>
    <!--    supportpage-->
    <string name="biography">Hi I am Diptanu Chakraborty, UI / UX designer, Web-developer, Graphic Designer, Music producer, Video editor, from Agartala, Tripura INDIA.I have rich experience in website designing as well as building Php Applications. In addition to that I have working experience as a Sound designer &amp; Video Editor.</string>
    <string name="gpay">chakrabortyd943@oksbi</string>
    <string name="version_num">1.2</string>
    <!--    update your app-->
    <string name="update_text_normal">New update is available please update your app .</string>
    <string name="update_text_crucial">App update required please update your app .</string>
</resources>