<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/screen1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    android:visibility="visible"
    >

    <!--header logo and text-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="Age Calculator"
        android:textColor="@color/themeBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />
    <!--header logo and text Ends -->

    <!--section heading-->
    <TextView
        android:id="@+id/section_heading_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:lineHeight="46dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/section_heading_one"
        android:textAlignment="center"
        android:textColor="#24272E"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <!--section heading Ends -->


    <!--selector section -->
    <Button
        android:id="@+id/dateSelecterBtn"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/dateselecterbtn"
        android:fontFamily="@font/font1"
        android:text="@string/select_date_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_heading_one"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/selectedDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:lineHeight="20dp"
        android:textAlignment="center"
        android:textColor="#6B7792"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSelecterBtn"
        app:layout_constraintVertical_bias="0.032" />
    <!-- selector section  Ends -->

    <!--    animation section-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/robotAnimation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDateField"
        app:layout_constraintVertical_bias="0.062"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lf30_editor_pqjdfzfv" />
    <!-- animation section Ends -->

    <!--    matrix section-->
    <TextView
        android:id="@+id/matrix_section_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="@string/matrix_section_text"
        android:textColor="@color/themeBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/robotAnimation"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrix_section_text"
        app:layout_constraintVertical_bias="0.1">

        <RadioButton
            android:id="@+id/radio_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/themeBlue"

            android:fontFamily="@font/font1"
            android:text="@string/radio_option_one"
            android:textColor="@color/themeBlueGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_days"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matrix_section_text"
            app:layout_constraintVertical_bias="0.137" />

        <RadioButton
            android:id="@+id/radio_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:buttonTint="@color/themeBlue"
            android:fontFamily="@font/font1"
            android:text="@string/radio_option_two"
            android:textColor="@color/themeBlueGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matrix_section_text"
            app:layout_constraintVertical_bias="0.137" />

        <RadioButton
            android:id="@+id/radio_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/themeBlue"
            android:fontFamily="@font/font1"
            android:text="@string/radio_option_three"
            android:textColor="@color/themeBlueGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toEndOf="@+id/radio_days"
            app:layout_constraintTop_toBottomOf="@+id/matrix_section_text"
            app:layout_constraintVertical_bias="0.137" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="502dp" />

    </RadioGroup>

    <!--    matrix section end-->


    <!--Footer section with button and copyright section-->
    <ImageView
        android:id="@+id/footerbg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="558dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/footer_main_activity" />

    <Button
        android:id="@+id/checkagebtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/checkagebtn"
        android:fontFamily="@font/font1"
        android:text="Go"
        android:textAllCaps="false"
        android:textColor="@color/themeBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footerbg"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/font1"
        android:text="@string/copyright_text"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <!--Footer section with button and copyright section ends -->
</androidx.constraintlayout.widget.ConstraintLayout>