<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DisplayAge_Layout">

    <!--header logo and text-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="Age Calculator"
        android:textColor="@color/themeBlack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />
    <!--header logo and text Ends -->

    <!--section heading-->

    <TextView
        android:id="@+id/el1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:lineHeight="46dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/resultsPage_section_one"
        android:textAlignment="center"
        android:textColor="@color/themeBlack"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/selectedDateFieldFirstLine"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:fontFamily="@font/font2"
        android:lineHeight="20dp"
        android:text="@string/selectedDate_text"
        android:textAlignment="center"
        android:textColor="@color/themeBlueGray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/el1"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/selectedDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:lineHeight="20dp"
        android:text="jgadjg"
        android:textAlignment="center"
        android:textColor="@color/themeBlueGray"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/selectedDateFieldFirstLine"
        app:layout_constraintVertical_bias="0.0" />

    <!--section heading Ends -->

    <!--    footer section-->

    <!--//inner text-->

    <ImageView
        android:id="@+id/centerImageVector"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDateField"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/ic_age_limit" />

    <ImageView
        android:id="@+id/footerbg"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerImageVector"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/footer_main_activity" />

    <TextView
        android:id="@+id/el3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="@string/resultsPage_results_section"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footerbg"
        app:layout_constraintVertical_bias="0.066" />

    <ImageView
        android:id="@+id/circularShapeHolder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/el3"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/white_circle" />

    <TextView
        android:id="@+id/circularMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font2"

        android:textColor="@color/themeBlue"
        android:textSize="65sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/circularShapeHolder"
        app:layout_constraintEnd_toEndOf="@+id/circularShapeHolder"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/circularShapeHolder"
        app:layout_constraintTop_toTopOf="@+id/circularShapeHolder"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/circular_maintext_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"

        android:textColor="@color/themeBlue"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/circularShapeHolder"
        app:layout_constraintEnd_toEndOf="@+id/circularShapeHolder"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/circularShapeHolder"
        app:layout_constraintTop_toTopOf="@+id/circularShapeHolder"
        app:layout_constraintVertical_bias="0.787" />
    <!--    sub line texts-->




    <TextView
        android:id="@+id/result_main_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"

        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularShapeHolder"
        app:layout_constraintVertical_bias="0.076" />

    <!--two buttons-->
    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/dateselecterbtn"
        android:fontFamily="@font/font3"
        android:text="@string/resultsPage_btn1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/footerbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_main_text_3"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/supportbtn"
        android:fontFamily="@font/font3"
        android:text="@string/resultsPage_btn2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/result_main_text_3"
        app:layout_constraintVertical_bias="0.232" />

    <!--//copyright-->
    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/font1"
        android:text="@string/copyright_text"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="399dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="335dp" />
</androidx.constraintlayout.widget.ConstraintLayout>